# the-moonstone-packet

./: ACTIONS.md  CHARACTERS.md  CHECKLIST.md  CLAUDE.md  COUNTERFACTUALS_PLAN.md  EXTRACTION_TECHNIQUES.md  LICENSE  LOG.md  PERSPECTIVES.md  PLAN.md  README.md  TONE.md  VIEWER_PLAN.md  pyproject.toml
graphs/: causal_analysis.json  causal_chain.gexf  causal_chain.graphml  causal_chain.json  causal_data.json  counterfactual_dag.gexf  counterfactual_dag.graphml  counterfactual_dag.json  counterfactual_data.json  counterfactual_metrics.json  counterfactuals.json  distinctive_features.json  event_perspective_analysis.json  event_perspective_bipartite.gexf  event_perspective_bipartite.graphml  event_perspective_matrix.csv  event_perspective_matrix.json  event_perspective_matrix_transposed.csv  hinge_points.json  knowledge_asymmetry.gexf  knowledge_asymmetry.graphml  knowledge_asymmetry.json  knowledge_data.json  knowledge_state.gexf  knowledge_state.graphml  knowledge_state.json  location_analysis.json  location_data.json  location_graph.gexf  location_graph.graphml  location_graph.json  perception_matrix.json  state_transition_analysis.json  state_transition_data.json  state_transitions.gexf  state_transitions.graphml  state_transitions.json  voice_fingerprints.json
scripts/: build_all_graphs.py  build_causal_chain_graph.py  build_counterfactual_dag.py  build_event_perspective_matrix.py  build_knowledge_state_graph.py  build_location_graph.py  build_state_transitions.py  build_voice_fingerprints.py  test_graphs.py
src/: pg155.txt
viewer/: app.py  counterfactuals.py  (+2 more)
(+12 files in other folders)
