[tool.poetry]
name = "moonstone-packet"
version = "0.1.0"
description = "Narrative packet extraction tools for The Moonstone"
authors = ["Aristoi Institute"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11,<3.14"
pyagrum = "^2.3.2"
networkx = "^3.6.1"
matplotlib = "^3.10.8"
pandas = "^2.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
